traefik/99-post-install/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: 443
---
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
  #name: traefik-auth
  #namespace: kube-system
#spec:
  #basicAuth:
    #secret: admin-secret
