traefik/99-post-install/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: kube-system
spec:
  entryPoints:
  - http
  routes:
  - kind: Rule
    match: "HostRegexp(`{host:.+}`)"
    services:
    - name: traefik
      port: 80
    middlewares:
    - name: https-redirect
      priority: 1
